2018-06-06
	- Inital Creation
2018-06-07
	- Added the sosad command. 